Add images and source

--- a/Resnet_President_candidate.ipynb
+++ b/Resnet_President_candidate.ipynb
@@ -34,7 +34,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "input_path = \"./PresidentRunner/\""
+    "input_path = \"./\""
    ]
   },
   {
@@ -45,7 +45,7 @@
    "outputs": [],
    "source": [
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-    "#device = \"cpu\""
+    "device = \"cpu\""
    ]
   },
   {
@@ -195,16 +195,16 @@
      "text": [
       "Epoch 1/3\n",
       "----------\n",
-      "train loss: 1.2804, acc: 0.4924\n",
-      "validation loss: 1.0006, acc: 0.6278\n",
+      "train loss: 1.3394, acc: 0.4518\n",
+      "validation loss: 1.1824, acc: 0.5803\n",
       "Epoch 2/3\n",
       "----------\n",
-      "train loss: 1.0162, acc: 0.6114\n",
-      "validation loss: 1.0014, acc: 0.6183\n",
+      "train loss: 1.0340, acc: 0.6235\n",
+      "validation loss: 1.0091, acc: 0.6112\n",
       "Epoch 3/3\n",
       "----------\n",
-      "train loss: 0.9536, acc: 0.6420\n",
-      "validation loss: 0.8788, acc: 0.6692\n"
+      "train loss: 0.9132, acc: 0.6630\n",
+      "validation loss: 1.0123, acc: 0.6215\n"
      ]
     }
    ],
@@ -255,12 +255,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "validation_img_paths = [\"validation/홍준표/google_0002.jpg\",\n",
-    "                        \"validation/윤석열/google_0012.jpg\",\n",
-    "                        \"validation/이재명/google_0013.jpg\",\n",
-    "                        \"validation/이재명/google_0040.jpg\",\n",
-    "                        \"validation/추미애/google_0017.jpg\",\n",
-    "                        \"validation/이낙연/naver_0050.jpg\",\n",
+    "validation_img_paths = [\"test/google_0002.jpg\",\n",
+    "                        \"test/google_0012.jpg\",\n",
+    "                        \"test/google_0013.jpg\",\n",
+    "                        \"test/google_0040.jpg\",\n",
+    "                        \"test/google_0017.jpg\",\n",
+    "                        \"test/naver_0050.jpg\",\n",
     "                       ]\n",
     "img_list = [Image.open(input_path + img_path) for img_path in validation_img_paths]"
    ]
@@ -285,18 +285,18 @@
     {
      "data": {
       "text/plain": [
-       "array([[1.8818641e-01, 1.3806971e-02, 4.2778846e-02, 9.0792380e-02,\n",
-       "        6.6443539e-01],\n",
-       "       [5.4604298e-01, 5.7055719e-02, 1.1749706e-01, 3.6746047e-02,\n",
-       "        2.4265815e-01],\n",
-       "       [4.3271497e-02, 3.1337235e-02, 7.8872687e-01, 1.9242171e-02,\n",
-       "        1.1742219e-01],\n",
-       "       [3.4617532e-02, 2.6472130e-01, 4.7365335e-01, 5.9620147e-03,\n",
-       "        2.2104579e-01],\n",
-       "       [1.4458364e-03, 1.3658591e-04, 1.5170922e-04, 9.9744922e-01,\n",
-       "        8.1655529e-04],\n",
-       "       [7.7808321e-02, 6.9848406e-01, 1.2506740e-01, 2.0161945e-02,\n",
-       "        7.8478239e-02]], dtype=float32)"
+       "array([[1.7211117e-01, 3.6802031e-02, 2.1782499e-02, 1.2675897e-02,\n",
+       "        7.5662845e-01],\n",
+       "       [5.7253629e-01, 6.7812771e-02, 5.1172610e-02, 4.1255979e-03,\n",
+       "        3.0435267e-01],\n",
+       "       [2.9948406e-02, 4.3238498e-02, 7.8914356e-01, 1.6415610e-03,\n",
+       "        1.3602795e-01],\n",
+       "       [7.1619436e-02, 2.4513905e-01, 4.6780995e-01, 8.3253614e-04,\n",
+       "        2.1459898e-01],\n",
+       "       [3.6112033e-03, 1.1733066e-03, 8.9215866e-04, 9.9174702e-01,\n",
+       "        2.5762515e-03],\n",
+       "       [1.2771910e-01, 6.0591620e-01, 1.3175604e-01, 1.1129568e-02,\n",
+       "        1.2347909e-01]], dtype=float32)"
       ]
      },
      "execution_count": 16,
@@ -348,8 +348,6 @@
     "for i, img in enumerate(img_list):\n",
     "    ax = axs[i]\n",
     "    ax.axis('off')\n",
-    "    #ax.set_title(\"{:.0f}%, {:.0f}%, {:.0f}%, {:.0f}%, {:.0f}%\".format(100*pred_probs[i,0],100*pred_probs[i,1],100*pred_probs[i,2],\n",
-    "    #                                                                  100*pred_probs[i,3],100*pred_probs[i,4]))\n",
     "    ax.set_title(labels[np.argmax(pred_probs[i])])\n",
     "    ax.imshow(img)"
    ]
