Add images and source

--- a/Resnet_President_candidate.ipynb
+++ b/Resnet_President_candidate.ipynb
@@ -44,8 +44,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-    "device = \"cpu\""
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")"
    ]
   },
   {
